# http-c-server

./: CMakeLists.txt  Makefile  README.md  main.c  server.c  server.h  start_testing.sh
.github/workflows/: tests.yaml
src/: CMakeLists.txt  main.c  server.c  server.h
tests/: CMakeLists.txt  main.cpp  tests.h  tests.hpp
